# MirroLink

./: README.md  idea.txt  meson.build
MirroLink/src/: main.cpp
MirroLink/src/core/: audio_forwarder.cpp  audio_forwarder.hpp  device_manager.cpp  input_handler.cpp  screen_mirror.cpp
MirroLink/src/gui/: device_view.cpp  main_window.cpp
MirroLink/src/utils/: config_manager.cpp  error.hpp  logger.cpp  logger.hpp
MirroLink/tests/integration/: system_test.cpp
docs/developer/: CONTRIBUTING.md
docs/user/: INSTALLATION.md
scripts/: setup.sh
src/core/: device_manager.cpp  device_manager.hpp  input_handler.cpp  input_handler.hpp  screen_mirror.cpp  screen_mirror.hpp
src/gui/: device_view.hpp  main_window.cpp  main_window.hpp  settings_dialog.cpp  settings_dialog.hpp
src/utils/: config_manager.hpp  logger.cpp  logger.hpp
tests/unit/: device_manager_test.cpp
